@@ -30,6 +30,7 @@ class Page:
 		self.dictmod = None
 		self.dictview = None
 		self.search = None
+		self.wdoc = None  # need to store 'WordDocument' stream
 		self.model, self.view, self.scrolled = tree.make_view() #None, None, None
 
 	def fload(self):
