@@ -1,3 +1,7 @@
+2011-11-29  Valek Filippov
+
+		* DOC: start to parse *Table
+
 2011-11-28  Valek Filippov
 
 		* DOC: parse FcLcb2k*
